--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,23 @@
-.venv
+# Python
 __pycache__/
 *.pyc
+*.pyo
+*.pyd
+.venv/
+venv/
+env/
+
+# Streamlit secrets (never commit)
+.streamlit/secrets.toml
+
+# OS files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# App-specific data
 weights.json
